--- a/vibro-speed.html
+++ b/vibro-speed.html
@@ -114,7 +114,7 @@
         <a href="https://apps.apple.com/app/id6480349110" class="btn">View more in App Store</a>
     </div>
     <div class="locale-cn hide">
-        <p>腕上语音码表，将时速用语音、振动在期望的一瞬报给你。</p>
+        <p>腕上语音码表，将时速用语音、振动在恰好的一瞬报给你</p>
         <a href="https://apps.apple.com/app/id6480349110" class="btn">在 App Store 中查看更多</a>
     </div>
 </div>
