--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>- 沧海一栗 ∙ Drop in Ocean -</title>
+    <title>- 沧海一粟 ∙ Drop in Ocean -</title>
 
     <style>
         * {
